# phalanx

./: .gitignore  PROGRESS.md  README.md  agents.py  diff_report.py  manifest.py  prompts.py  pyproject.toml  repo_summarizer.py
tests/: test_diff_report.py  test_manifest.py  test_repo_summarizer_diff_only.py
